Move lofiAcl project